fixed dropdowns, mod_finder alignments

--- a/css/template.css
+++ b/css/template.css
@@ -45,8 +45,8 @@ blockquote,.grey,.pagenavcounter{color:#bbb}
 .nav-tabs > li.active a,.nav-tabs > li > a:hover{box-shadow:2px 0 2px rgba(0,0,0,.2)}
 
 .dropdown{position:relative}
-.dropdown-menu{position:absolute;z-index:1000;display:none;background:#fff;padding:4px;border:1px solid #e3e4e8;border-radius:3px;box-shadow:2px 2px 2px rgba(71,72,74,.2);right:0;white-space:nowrap}
-.dropdown-menu li{margin:4px;padding:4px 3px;cursor:pointer}
+.dropdown-menu{position:absolute;z-index:1000;display:none;padding:4px;border-radius:3px;box-shadow:2px 2px 2px rgba(0,0,0,.2);right:0;white-space:nowrap}
+.dropdown-menu li{margin:4px;padding:2px;cursor:pointer}
 .dropdown-menu li:hover{border-radius:3px}
 .open{z-index:1000}
 .open >.dropdown-menu{display:block}
@@ -153,9 +153,9 @@ blockquote,.grey,.pagenavcounter{color:#bbb}
 .search-inner{height:30px;padding:5px 12px 5px 5px}
 .search-query{float:left;width:100%;height:100%;padding: 0 0 0 5px;color:#999;border-radius:3px;border:0;margin-right:-33px;box-shadow: 1px 1px 1px rgba(0,0,0,.1);}
 .button-container{float:left;height:100%;width:28px}
-.search-button{padding:2px;margin:4px 0 0 3px;background:#424347;transform:scale(-1,1);-webkit-transform:scale(-1,1)}
+.search-button{padding:1px 5px;margin:4px 0 0 3px;background:#424347;transform:scale(-1,1);-webkit-transform:scale(-1,1)}
 .search-button i{color:#fff !important;text-shadow:1px 1px 1px #111;font-size:12px}
-.autocompleter-choices{border-radius:0 0 3px 3px;border-top:0;padding:1px 0;margin:0}
+.autocompleter-choices{border-radius:0 0 3px 3px;padding:0;margin-top:-2px}
 
 .breadcrumbs{font-size:14pt}
 .breadcrumbs i{padding:0 5px}
@@ -197,7 +197,6 @@ body{padding:0!important;overflow-x:hidden}
 
 .navbar-inner > div{padding:5px 0 0 0}
 .navbar{position:relative!important;margin:0!important}
-.navbar-inner .span2{max-width:100px;float:left !important;margin:0 20px 0}
 .navbar-inner ul,.navbar-inner .nav li{box-shadow:none !important;border:0!important;padding:0}
 .navbar-inner .nav li{margin:0 15px 5px 0}
 
